<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="app_id">772713626123272</string>-->
  	<string name="app_id">1444177462496715</string>  
	<string name="app_name">Saddahaq</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="signup">Sign Up</string>
    <string name="orsignin">Or Sign in using</string>
    <string name="enter_emailid">Enter Your mail id</string>
    <string name="enter_pswd">**********</string>
	<string name="login_txt">You have  to Login or Register to  use this feature</string>
	<string name="firstname">FirstName *</string>
	<string name="firstname1">FirstName</string>
	<string name="lastname">LastName *</string>
	<string name="lastname1">LastName</string>
	<string name="username">User Name</string>
	<string name="name">Name</string>
	<string name="save">Save</string>
	<string name="politics">Politics</string>
	<string name="hi">Human Interest</string>
	<string name="loading">Loading&#8230;</string>
	<string name="num">25</string>
	<string name="ly">Last Year</string>
	<string name="lm">Last Month</string>
	<string name="lw">Last Week</string>
	<string name="views">Views</string>
	<string name="change">Change\nProfile\nPicture</string>
	<string name="comments">Comments</string>
	<string name="voteups">Vote Ups</string>
	<string name="news1">News</string>
	<string name="articles">Articles</string>
	<string name="events">Events</string>
	<string name="sign">Sign</string>
	<string name="vote1">Vote</string>
	<string name="petetions">Petetions</string>
	<string name="apps">Apps</string>
	<string name="okay">Okay</string>
	<string name="parties">parties</string>
	<string name="politicians">Politicians</string>
	<string name="national">National</string>
	<string name="weird">Weird</string>
	<string name="local">Local</string>
	<string name="arts">Arts</string>
	<string name="books">Books</string>
	<string name="celebrities">Celebrities</string>
	<string name="movies">Movies</string>
	<string name="tv">TV</string>
	<string name="theatre">Theatre</string>
	<string name="bollywood">Bollywood</string>
	<string name="hollywood">Hollywood</string>
	<string name="regional">Regional</string>
	<string name="international">International</string>
	<string name="policies">Policies</string>
	<string name="social">Social-Civil Activity</string>
	<string name="entertainment">Entertainment</string>
	<string name="sports">Sports</string>
	<string name="lifestyle">Lifestyle</string>
	<string name="business">Business</string>
	<string name="technology">Technology</string>
	<string name="health">Health</string>
	<string name="health1">Health and Fitness</string>
	<string name="science">Science</string>
	<string name="education">Education</string>
	<string name="cricket">Cricket</string>
	<string name="hockey">Hockey</string>
	<string name="boxing">Boxing</string>
	<string name="soccer">Soccer</string>
	<string name="tennis">Tennis</string>
	<string name="click">Click</string>
	<string name="athletics">Athletics</string>
	<string name="badminton">Badminton</string>
	<string name="olympics">Olympics</string>
	<string name="f1">F1</string>
	<string name="shooting">Shooting</string>
	<string name="swimming">Swimming</string>
	<string name="automotive">Automotive</string>
	<string name="culture">Culture</string>
	<string name="fandb">Food and Beverage</string>
	<string name="handg">Home and Garden</string>
	<string name="travel">Travel</string>
	<string name="legal">Legal/Law</string>
	<string name="companies">Companies</string>
	<string name="economy">Economy</string>
	<string name="industry">Industry</string>
	<string name="markets">Markets</string>
	<string name="people">People</string>
	<string name="internet">Internet</string>
	<string name="computing">Computing</string>
	<string name="pt">Personal Technology</string>
	<string name="et">Enterprise Technology</string>
	<string name="videogames">Video Games</string>
	<string name="mandap">Mobiles and Apps</string>
	<string name="pc_lap">Pcs,Laptops and Tablets</string>
	<string name="wg">Wearable Gadgets</string>
	<string name="cameras">Cameras</string>
	<string name="nandf">Nutrition and Fitness</string>
	<string name="mandp">Money and Policy</string>
	<string name="dands">Drugs and Supplements</string>
	<string name="space">Space</string>
	<string name="environment">Environment</string>
	<string name="geography">Geography</string>
	<string name="title_personalize">set what kind of news you \n to view on home page</string>
	<string name="title_notification">Set When and how often you\n what to receive emails from saddahaq</string>
	<string name="title_pswd">Change your password</string>
	<string name="spinner_title">Select One</string>
	<string name="location">Location</string>
	<string name="dob">Birthday</string>
	<string name="edit_fname">Enter First Name</string>
	<string name="edit_lname">Enter Last Name</string>
	<string name="edit_location">Your current Location</string>
	<string name="edit_mobile">Your Mobile Number</string>
	<string name="edit_dob">Your date of birth</string>
	<string name="edit_curpswd">Your current password</string>
	<string name="edit_newpswd">New password</string>
	<string name="edit_confpswd">Confirm Password</string>
	<string name="cur_pswd">Current Password</string>
	<string name="new_pswd">New Password</string>
	<string name="Confirm_pswd">Confirm Password</string>
	<string name="mobile">Mobile</string>
	<string name="emailid">Email id</string>
	<string name="password">Password</string>
	<string name="ok">OK</string>
	<string name="on">ON</string>
	<string name="off">OFF</string>
	<string name="help">Help</string>
	<string name="q">\?</string>
	<string name="following">Following</string>
	<string name="followers">Followers</string>
	<string name="notifications">Notifications</string>
	<string name="change_pswd">Change Password</string>
	<string name="change_notifications">Email Notifications</string>
	<string name="change_profile">Profile Setings</string>
	<string name="change_preferences">Personalize news</string>
	<string name="cant_connect">Could not connect</string>
	<string name="no_internet">Internet Connection is needed \n to use Saddahaq</string>
	<string name="accept">I accept the terms and conditions of saddahaq.com</string>
	<string name="approve">When moderator approves \nArticle/Event/Petition</string>
	<string name="comment">When someone comment \non my Article/Event</string>
	<string name="respond">When someone respond\non your comment</string>
	<string name="mention">When someone \nmention you</string>
	<string name="vote">When someone votes \non my Article</string>
	<string name="follow">When someone I follow posts \nan Article/Event</string>
	<string name="rsvp">When someone RSVP \nto my Event</string>
	<string name="news">Send News digest</string>
	<string name="interest">posted Article/Event/Petition \nmatches with your interest</string>
	<string-array name="nav_drawer_items">
        <item >Notifications</item>
        <item >Dashboard</item>
        <item >Categories</item>
        <item >Write a Campaign</item>
        <item >Invite</item>
        <item >Read Later</item>
        <item >Profile</item>
        <item >Settings</item>
        <item >Signout</item>
    </string-array>
    <string-array name="notification_array1">
	    <item>As it comes</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="notification_array2">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_notifications</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
    </array>
     <string name="desc_list_item_icon">Item Icon</string>
</resources>