<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<CheckBox
    android:id="@+id/check_ls_auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/automotive"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
<CheckBox
    android:id="@+id/check_ls_culte"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/culture"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
</LinearLayout> 
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<CheckBox
    android:id="@+id/check_ls_fandb"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/fandb"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
<CheckBox
    android:id="@+id/check_ls_handg"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/handg"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
</LinearLayout> 
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<CheckBox
    android:id="@+id/check_ls_theatre"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/theatre"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
<CheckBox
    android:id="@+id/check_ls_travel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/travel"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
</LinearLayout>
<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/okay"
	 style="?android:attr/buttonBarStyle"
    android:id="@+id/btn_lifestyle"/>     
</LinearLayout>
