<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#ffffff">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="?android:attr/selectableItemBackground"
    >
<Button
    android:id="@+id/cate_politics"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/politics"
    android:textColor="#000000" />
<Button
    android:id="@+id/cate_tech"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/technology"
    android:textColor="#000000" />
</LinearLayout>    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="?android:attr/selectableItemBackground"
    >
<Button
    android:id="@+id/cate_sports"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/sports"
    android:textColor="#000000" />
<Button
    android:id="@+id/cate_entertainment"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/entertainment"
    android:textColor="#000000" />
</LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="?android:attr/selectableItemBackground"
    >
<Button
    android:id="@+id/cate_hi"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/hi"
    android:textColor="#000000" />
<Button
    android:id="@+id/cate_lifestyle"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/lifestyle"
    android:textColor="#000000" />
</LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="?android:attr/selectableItemBackground"
    >
<Button
    android:id="@+id/cate_business"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/business"
    android:textColor="#000000" />

<Button
    android:id="@+id/cate_health"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/health"
    android:textColor="#000000" />

</LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="?android:attr/selectableItemBackground"
    >
<Button
    android:id="@+id/cate_education"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/education"
    android:textColor="#000000" />

<Button
    android:id="@+id/cate_legal"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/legal"
    android:textColor="#000000" />

</LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="?android:attr/selectableItemBackground"
    >
<Button
    android:id="@+id/cate_science"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/science"
    android:textColor="#000000" />

<Button
    android:visibility="invisible"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_weight="0.50"
    android:text="@string/legal"
    android:textColor="#000000" />

</LinearLayout>
</LinearLayout>
</ScrollView>