<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<CheckBox
    android:id="@+id/check_busi_company"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/companies"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
<CheckBox
    android:id="@+id/check_busi_economy"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/economy"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
</LinearLayout> 
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<CheckBox
    android:id="@+id/check_busi_industry"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/industry"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
<CheckBox
    android:id="@+id/check_busi_market"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/markets"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
</LinearLayout> 
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
	<CheckBox
    android:id="@+id/check_busi_people"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/people"
    android:textColor="#000000"
    android:layout_weight="0.5"
    />
</LinearLayout>
<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/okay"
	 style="?android:attr/buttonBarStyle"
    android:id="@+id/btn_business"/>     
</LinearLayout>
